2004-09-07 Gareth Jones <gareth_jones@users.berlios.de>

	* testsuite/libprometheus/Makefile: Removed unused variables $(PASS) &
	  $(FAIL).

	* testsuite/libprometheus/warning: Added stdout & stderr tests.
	* testsuite/libprometheus/failure: Added stdout & stderr tests.
	* testsuite/libprometheus/error: Added stdout & stderr tests.

	* testsuite/libprometheus/finish/success: Fixed buglet.

	* testsuite/libprometheus/setup_logging/README: Added.
	* testsuite/libprometheus/log/README: Added.

	* scripts/libprometheus.bash.in (setup_logging): Ensure $terminal_output
	  is set.

2004-08-29 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* scripts/pkgrm.in: Written.
	* man/pkgrm.8.in: Written.

	* man/pkgadd.8.in, man/pkginstall.8.in: Changed man page header to
          correclty reflect section 8 of the man pages.

2004-08-17 Gareth Jones <gareth_jones@users.berlios.de>

	* testsuite/libprometheus/usage_error: Renamed usage_error.bash.in to
	  stderr.bash.in.
	* testsuite/libprometheus/usage_error: Added stdout.bash.in &
	  status.bash.in.
	* testsuite/libprometheus/script_usage_err: Renamed
	  script_usage_err.bash.in to stderr.bash.in.
	* testsuite/libprometheus/script_usage_err: Added stdout.bash.in &
	  status.bash.in.

	* testsuite/runtest: Removed.
	* testsuite/runtest.in: Added.
	* testsuite/TEMPLATE: Added.
	* testsuite/*: Updated for new script.

2004-08-16 Gareth Jones <gareth_jones@users.berlios.de>

	* testsuite/libprometheus/Makefile: Made test descriptions more useful.

	* testsuite/libprometheus/setup_logging/*: Added.

2004-08-15 Gareth Jones <gareth_jones@users.berlios.de>

	* Makefile: Added building testsuite & check target.
	* testsuite/Makefile: Added.
	* testsuite/README: Added.

	* testsuite/runtest: Added.
	* testsuite/runtest: Fixed to run in tests' own directories.
	* testsuite/runtest: Added logging.

	* testsuite/libprometheus/Makefile: Added.
	* testsuite/libprometheus/finish/success.bash.in: Added.