@@ -14,3 +14,48 @@ fails, with <z> equal to `p' or `f' respectively.
 <test> indicates what is actually being tested given the above parameters, one
 of `status' (exit status of `log' function), `log' (contents of log file),
 `stdout' (text echoed to stdout), or `stderr' (text echoed to stderr).
+
+The function used to test the logging code is in `output.bash'.
+
+TODO
+
+tnldcf_status
+tnldcf_stderr
+tnldcf_stdout
+tnldcp_status
+tnldcp_stderr
+tnldcp_stdout
+tnlfcf_log
+tnlfcf_status
+tnlfcf_stderr
+tnlfcf_stdout
+tnlfcp_log
+tnlfcp_status
+tnlfcp_stderr
+tnlfcp_stdout
+tnlncf_status
+tnlncf_stderr
+tnlncf_stdout
+tnlncp_status
+tnlncp_stderr
+tnlncp_stdout
+tyldcf_status
+tyldcf_stderr
+tyldcf_stdout
+tyldcp_status
+tyldcp_stderr
+tyldcp_stdout
+tylfcf_log
+tylfcf_status
+tylfcf_stderr
+tylfcf_stdout
+tylfcp_log
+tylfcp_status
+tylfcp_stderr
+tylfcp_stdout
+tylncf_status
+tylncf_stderr
+tylncf_stdout
+tylncp_status
+tylncp_stderr
+tylncp_stdout
