@@ -1,3 +1,7 @@
+2004-09-13 Gareth Jones <gareth_jones@users.berlios.de>
+
+	* testsuite/libprometheus/log/output.bash: Added.
+
 2004-09-07 Gareth Jones <gareth_jones@users.berlios.de>
 
 	* testsuite/libprometheus/Makefile: Removed unused variables $(PASS) &
